--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
     "@types/pg": "^8.16.0",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.1",
     "argon2": "^0.44.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
